--- a/src/janim_stdio_i/locale/source/cli.pot
+++ b/src/janim_stdio_i/locale/source/cli.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-12-03 15:42+0800\n"
+"POT-Creation-Date: 2025-12-04 15:57+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -32,5 +32,5 @@ msgstr ""
 
 #: src\janim_stdio_i\cli.py:77
 #, python-format
-msgid "Invalid message: %r"
+msgid "Error occurred while processing message %r"
 msgstr ""
